# pytorch-bench

./: .clang-format  .gitmodules  CMakeLists.txt  main.cpp
include/: args_handler.hpp  statistics.hpp
src/: args_handler.cpp
